--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 
 # reference these in your code with process.env.SECRET
 
-PREFIX=1
+PREFIX=.
 BOT_TOKEN=NzQwMzIzNDIyMTA5ODI3MTgy.XynV6g.2R5LloqA0GT0Eyj-tGzWvfLNmmE
 YTAPI_KEY=AIzaSyBPTum2simkw5a3QRwAik4gBEBR7RFZ7m8
 PROJECT_DOMAIN=ALIVE-Skull
